--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -19,7 +19,13 @@
       <icc-grid-cell-view [gridConfig]="gridConfig" [rowIndex]="rowIndex" [column]="column" [record]="record">
       </icc-grid-cell-view>
     } @else {
-      <icc-grid-cell-edit [gridConfig]="gridConfig" [rowIndex]="rowIndex" [column]="column" [record]="record">
+      <icc-grid-cell-edit
+        [gridConfig]="gridConfig"
+        [gridSetting]="gridSetting"
+        [rowIndex]="rowIndex"
+        [column]="column"
+        [record]="record"
+      >
       </icc-grid-cell-edit>
     }
   </icc-grid-cell>
