--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -34,6 +34,7 @@
           *ngIf="!isRowGroup(index, record)"
           [ngStyle]="{ width: tableWidth + 'px' }"
           [gridConfig]="gridConfig"
+          [gridSetting]="gridSetting"
           [rowIndex]="index"
           [columns]="columns"
           [columnWidths]="columnWidths"
