--- a/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
@@ -8,6 +8,7 @@
     [column]="getColumn(header)"
     [columns]="columns"
     [gridConfig]="gridConfig"
+    [gridSetting]="gridSetting"
     (columnResizing)="columnResizing.emit($event)"
     (columnResized)="columnResized.emit($event)"
     iccColumnResize
