--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -27,6 +27,7 @@
     [column]="column"
     [columns]="columns"
     [gridConfig]="gridConfig"
+    [gridSetting]="gridSetting"
     (columnResizing)="columnResizing.emit($event)"
     (columnResized)="columnResized.emit($event)"
     cdkDrag
