--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,5 +1,6 @@
 <icc-grid-header-view
   [gridConfig]="gridConfig"
+  [gridSetting]="gridSetting"
   [columns]="columns"
   [columnHeaderPosition]="columnHeaderPosition"
   (gridColumnWidthsEvent)="gridColumnWidthsEvent($event)"
