--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -1,4 +1,5 @@
 <icc-grid-header-view
+  [gridSetting]="gridSetting"
   [gridConfig]="treeConfig"
   [columns]="columns"
   [columnHeaderPosition]="columnHeaderPosition"
