--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -8,7 +8,7 @@
       >
       </icc-layout-header>
 
-      <icc-grid-view [gridConfig]="gridConfig" [gridSetting]="gridSetting" [columns]="columns"> </icc-grid-view>
+      <icc-grid-view [gridSetting]="gridSetting" [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
 
       <icc-grid-footer [gridConfig]="gridConfig" *ngIf="!gridConfig.hideGridFooter"> </icc-grid-footer>
     </ng-container>
