--- a/projects/icc/tree/src/tree.component.html
+++ b/projects/icc/tree/src/tree.component.html
@@ -1,15 +1,17 @@
 <icc-layout *ngIf="treeConfig$ | async as treeConfig">
-  <ng-container *ngIf="columnsConfig$ | async as columns">
-    <icc-layout-header
-      *ngIf="!treeConfig.hideTopbar"
-      [buttons]="buttons"
-      (iccButtonClick)="buttonClick($event, treeConfig)"
-    >
-    </icc-layout-header>
+  <ng-container *ngIf="gridSetting$ | async as gridSetting">
+    <ng-container *ngIf="columnsConfig$ | async as columns">
+      <icc-layout-header
+        *ngIf="!treeConfig.hideTopbar"
+        [buttons]="buttons"
+        (iccButtonClick)="buttonClick($event, treeConfig)"
+      >
+      </icc-layout-header>
 
-    <icc-tree-view [treeConfig]="treeConfig" [columns]="columns"> </icc-tree-view>
-    <!--
+      <icc-tree-view [gridSetting]="gridSetting" [treeConfig]="treeConfig" [columns]="columns"> </icc-tree-view>
+      <!--
       <icc-grid-footer [treeConfig]="treeConfig" *ngIf="!treeConfig.hideGridFooter"> </icc-grid-footer>
     -->
+    </ng-container>
   </ng-container>
 </icc-layout>
