--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
@@ -37,6 +37,6 @@
     {{ "ICC.UI.GRID.DISPLAYING" | translate }}
     {{ displaying }}
     {{ "ICC.UI.GRID.OF" | translate }}
-    {{ gridConfig.totalCounts }}
+    {{ gridSetting.totalCounts }}
   </icc-layout-footer-end>
 </icc-layout-footer>
