--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -10,7 +10,8 @@
 
       <icc-grid-view [gridSetting]="gridSetting" [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
 
-      <icc-grid-footer [gridConfig]="gridConfig" *ngIf="!gridConfig.hideGridFooter"> </icc-grid-footer>
+      <icc-grid-footer [gridSetting]="gridSetting" [gridConfig]="gridConfig" *ngIf="!gridConfig.hideGridFooter">
+      </icc-grid-footer>
     </ng-container>
   </ng-container>
 </icc-layout>
