add grid settings

--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -22,6 +22,7 @@
         <icc-grid-row-group
           *ngIf="isRowGroup(index, record)"
           [gridConfig]="gridConfig"
+          [gridSetting]="gridSetting"
           [rowIndex]="index"
           [columns]="columns"
           [record]="record"
