--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -26,6 +26,7 @@
     >
       <icc-tree-row
         class="icc-tree-node"
+        [gridSetting]="gridSetting"
         [treeConfig]="treeConfig"
         [columns]="columns"
         [columnWidths]="columnWidths"
