--- a/projects/icc/tree/src/tree.component.html
+++ b/projects/icc/tree/src/tree.component.html
@@ -4,7 +4,7 @@
       <icc-layout-header
         *ngIf="!treeConfig.hideTopbar"
         [buttons]="buttons"
-        (iccButtonClick)="buttonClick($event, treeConfig)"
+        (iccButtonClick)="buttonClick($event, treeConfig, gridSetting)"
       >
       </icc-layout-header>
 
