--- a/projects/icc/d3/src/d3.component.html
+++ b/projects/icc/d3/src/d3.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="d3Config$ | async as d3Config">
-  <ng-container *ngIf="chartConfigs$ | async as chartConfigs">
-    <ng-container *ngIf="data$ | async as data">
-      <icc-d3-view [d3Config]="d3Config" [chartConfigs]="chartConfigs" [data]="data"></icc-d3-view>
+  <ng-container *ngIf="d3Setting$ | async as d3Setting">
+    <ng-container *ngIf="chartConfigs$ | async as chartConfigs">
+      <ng-container *ngIf="data$ | async as data">
+        <icc-d3-view [d3Config]="d3Config" [chartConfigs]="chartConfigs" [data]="data"></icc-d3-view>
+      </ng-container>
     </ng-container>
   </ng-container>
 </ng-container>
