form view selection

--- a/projects/icc/grid/src/components/form-view/form-view.component.html
+++ b/projects/icc/grid/src/components/form-view/form-view.component.html
@@ -1,19 +1,5 @@
 <icc-window [windowConfig]="windowConfig">
   <icc-layout [resizeable]="false" style="padding: 1px">
-    <icc-layout-header
-      >Header
-
-      <button icc-button (click)="close()">Close</button>
-    </icc-layout-header>
-
-    <icc-layout-horizontal [resizeable]="false">
-      <icc-layout-left> </icc-layout-left>
-
-      <icc-layout-center> Horizontal Layout With header and footer panels </icc-layout-center>
-
-      <icc-layout-right> </icc-layout-right>
-    </icc-layout-horizontal>
-
-    <icc-layout-footer> Footer </icc-layout-footer>
+    <icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
   </icc-layout>
 </icc-window>
