--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -43,6 +43,7 @@
           [record]="getRecord(record)"
           [selected]="selected(record, selection)"
           (click)="rowClick($event, index, record, selection, gridData)"
+          (dblclick)="rowDblClick(record)"
         >
         </icc-grid-row>
       </ng-container>
