--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -5,6 +5,7 @@
 
   icc-layout-header {
     height: 25px;
+    cursor: move;
   }
 
   icc-icon {
@@ -18,5 +19,6 @@
     height: 100%;
     z-index: 1000;
     overflow: hidden;
+    cursor: unset;
   }
 }
