--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -13,3 +13,4 @@
 @forward "../../dashboard/src/dashboard.component.theme";
 @forward "../../calendar/src/calendar.component.theme";
 @forward "../../window/src/window.component.theme";
+@forward "../../spinner/src/spinner.component.theme";
