--- a/projects/icc/theme/src/_theme.scss
+++ b/projects/icc/theme/src/_theme.scss
@@ -21,4 +21,5 @@
   @include icc.icc-dashboard-theme();
   @include icc.icc-calendar-theme();
   @include icc.icc-window-theme();
+  @include icc.icc-spinner-theme();
 }
