--- a/projects/icc/menu/src/cdk-menus.component.html
+++ b/projects/icc/menu/src/cdk-menus.component.html
@@ -3,12 +3,15 @@
   <div class="icc-menu-row" *ngFor="let item of items">
     <icc-menu-item
       *ngIf="isLeafMenu(item)"
+      iccMenuItem
       [disabled]="getDisabled(item)"
       [form]="form"
       [menuItem]="item"
       (iccMenuItemClick)="menuItemClick($event)"
     >
     </icc-menu-item>
+
+    <!--
 
     <span
       *ngIf="hasChildItem(item) && level === 0"
@@ -32,6 +35,19 @@
       [popoverLevel]="level"
       [clickToClose]="clickToClose"
       [iccPopoverPosition]="rightBottom"
+      (iccMenuItemClick)="menuItemClick($event)"
+    >
+    </icc-menu-item>
+
+    -->
+
+    <icc-menu-item
+      *ngIf="hasChildItem(item) && level > 0"
+      iccMenuItem
+      [cdkMenuTriggerFor]="menu"
+      [disabled]="getDisabled(item)"
+      [form]="form"
+      [menuItem]="item"
       (iccMenuItemClick)="menuItemClick($event)"
     >
     </icc-menu-item>
