--- a/projects/icc-demo/src/app/views/menu/demos/menu-panel/menu-panel.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/menu-panel/menu-panel.component.html
@@ -1,9 +1,7 @@
-<div (click)="openMenuPanel($event)">
-  <button icc-button>
-    Open Menu Panel
-    <icc-icon config="ellipsis-v"></icc-icon>
-  </button>
-</div>
+<button icc-button [cdkMenuTriggerFor]="menu1">Open Menu Panel</button>
+<ng-template #menu1>
+  <cdk-menus [items]="defaultContextMenu" (iccMenuItemClick)="onMenuItemClick($event)"> </cdk-menus>
+</ng-template>
 
 <div cdkMenuBar>
   <button class="example-menu-bar-item" iccMenuItem [cdkMenuTriggerFor]="file">File</button>
