--- a/projects/icc-demo/src/app/views/menu/demos/menu-panel/menu-panel.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/menu-panel/menu-panel.component.html
@@ -3,6 +3,11 @@
   <cdk-menus [items]="defaultContextMenu" (iccMenuItemClick)="onMenuItemClick($event)"> </cdk-menus>
 </ng-template>
 
+<button icc-button [cdkContextMenuTriggerFor]="menu1">Context Menu</button>
+<ng-template #menu1>
+  <cdk-menus [items]="defaultContextMenu" (iccMenuItemClick)="onMenuItemClick($event)"> </cdk-menus>
+</ng-template>
+
 <div cdkMenuBar>
   <button class="example-menu-bar-item" iccMenuItem [cdkMenuTriggerFor]="file">File</button>
   <button class="example-menu-bar-item" iccMenuItem [cdkMenuTriggerFor]="edit">Edit</button>
@@ -11,7 +16,7 @@
 </div>
 
 <ng-template #menustest>
-  <cdk-menus [items]="menuItems" [level]="level + 1"> </cdk-menus>
+  <cdk-menus [items]="menuItems" [level]="1"> </cdk-menus>
 </ng-template>
 
 <ng-template #file>
