--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -10,7 +10,7 @@
     </icc-layout-header>
 
     <icc-layout-horizontal *ngIf="item?.expanded && item.items">
-      <icc-menus [items]="item.items" (iccMenuItemClick)="onMenuItemClick($event)"></icc-menus>
+      <cdk-menus [items]="item.items" (iccMenuItemClick)="onMenuItemClick($event)"></cdk-menus>
     </icc-layout-horizontal>
   </icc-layout>
 }
